# actenon-scan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  link-check.yml  protocol-drift.yml  publish.yml
actenon_scan/: __init__.py  __main__.py  baseline.py  cli.py  engine.py
actenon_scan/detectors/: __init__.py  guards.py  reachability.py  sinks.py
actenon_scan/report/: json_out.py  pretty.py  sarif.py
actenon_scan/rules/: __init__.py  default_rules.json  loader.py
scripts/: check_readme_installs.py  sync_badges.py
tests/: pinned_repos.json  test_baseline_suppress.py  test_cli.py  test_corpus.py  test_corpus_completeness.py  test_crewai_false_positives.py  test_guards.py  test_pinned_repos.py  test_prompt17.py  test_protocol_drift.py  test_regression.py  test_root_level_files.py  test_sarif.py  test_venv_exclusion.py
tests/corpus/ACCESS-CONTROL-MUTATE/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/ACCESS-CONTROL-MUTATE/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/BROWSER-ACTION/safe/: 01_non_tool_browser.py  02_guarded_browser.py  03_fixture.py
tests/corpus/BROWSER-ACTION/vulnerable/: 01_page_click.py  02_page_fill.py  03_selenium_send_keys.py
tests/corpus/COMMUNICATION-SEND-NAME/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/COMMUNICATION-SEND-NAME/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/COMMUNICATION-SEND/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/COMMUNICATION-SEND/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-FILE/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-FILE/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-OBJ/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-OBJ/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-OS/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-OS/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-SQL-RAW/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-SQL-RAW/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-SQL/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATA-DELETE-SQL/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATABASE-MUTATE/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATABASE-MUTATE/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATABASE-ORM-MUTATE/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DATABASE-ORM-MUTATE/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DECLARATIVE-GUARD/safe/: class_attribute_guard.py  constructor_params_guard.py  decorator_guard.py  inherited_guard.py
tests/corpus/DECLARATIVE-GUARD/vulnerable/: constructor_no_params.py  falsy_guard.py  no_guard.py
tests/corpus/DEPLOY-K8S/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DEPLOY-K8S/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DEPLOY-SUBPROCESS/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DEPLOY-SUBPROCESS/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DEPLOY-TERRAFORM/safe/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/DEPLOY-TERRAFORM/vulnerable/: 01_fixture.py  02_fixture.py  03_fixture.py
tests/corpus/EXEC-CODE/safe/: 01_exec_in_non_tool.py  02_exec_guarded.py  03_read_only_function.py  04_re_compile.py  05_compile_unused.py
tests/corpus/EXEC-CODE/vulnerable/: 01_exec_in_tool.py  02_eval_in_tool.py  03_compile_in_tool.py
tests/corpus/EXEC-CONTAINER/safe/: 01_non_tool_container.py  02_guarded_container.py  03_fixture.py
tests/corpus/EXEC-CONTAINER/vulnerable/: 01_docker_exec_run.py  02_container_run.py  03_container_create.py
tests/corpus/EXEC-SHELL/safe/: 01_subprocess_in_non_tool.py  02_guarded_subprocess.py  03_no_shell.py  04_asyncio_run.py  05_subprocess_non_tool.py  06_plain_class_no_action_base.py
tests/corpus/FILE-WRITE/safe/: 03_str_replace.py  (+3 more)
tests/corpus/_global_safe/: collisions.py
tests/fixtures/safe/: not_an_agent.py  refund_tool_actenon.py  refund_tool_generic.py
tests/fixtures/vulnerable/: delete_files_os.py  delete_pathlib.py  delete_tool.py  deploy_tool.py  refund_tool.py  replit_incident.py
(+71 files in other folders)
